chore: initial setup

--- a/assets/styles/reset.styl
+++ b/assets/styles/reset.styl
@@ -1,6 +1,4 @@
 @require 'defaults'
-@require './utilities/*.styl'
-@require './themes/dark.styl'
 
 *,
 *::before, 
@@ -13,7 +11,8 @@
   font: inherit
 
 html
-  color-scheme: light dark
+  // implement light and dark mode later
+  // color-scheme: light dark
 
 body
   min-height: 100vh
