feat(post): Edit Post

--- a/assets/styles/defaults.styl
+++ b/assets/styles/defaults.styl
@@ -42,7 +42,7 @@
   --color-grey-light: #f0f0f0
   --color-neutral: #fbfbfb
   --color-primary: #597EF7
-  --color-secondary: #F7BD37
+  --color-secondary: #b718cc
   --color-success: #34C759
   --color-warning: #FA8C16
 
